--- a/HomeWork_2/style.css
+++ b/HomeWork_2/style.css
@@ -1,82 +1,172 @@
 * {
     /* Свойства для сброса начальных стилей элементов */
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body {}
+body {
+    font-family: "Inter", sans-serif;
+    color: #303030;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+button {
+    border: none;
+    background-color: transparent;
+}
 
 header {
     /* Стили для хедера */
+    background-color: #2965f1;
+    padding: 23px 0;
 }
 
 header span {
     /* Стили для текста в хедере IT-INCUBATOR */
+    font-weight: 700;
+    font-size: 20px;
+    color: #fff;
 }
 
 .main-section {
     /* Стили для первой секции */
+    background-color: #fafaff;
+    /*min-height: 100vh;*/
+    padding: 60px 0;
 }
 
 .main-title {
     /* Стили для заголовка в первой секции */
+    font-weight: 700;
+    font-size: 48px;
+    margin-bottom: 20px;
 }
 
 .main-text {
     /* Стили для текста в первой секции */
+    font-weight: 400;
+    font-size: 18px;
 }
 
 .main-image {
     /* Стили для изображения в первой секции */
+    max-width: 715px;
+    height: 508px;
 }
 
 
 .about-section {
     /* Стили для второй секции */
+    background-color: #fff;
+    padding: 100px 0;
 }
 
 select {
     /* Стили для выпадающего списка */
+    padding: 8px 12px;
+    border: 1px solid rgba(48, 48, 48, 0.3);
+    border-radius: 5px;
+    width: 150px;
+    height: 36px;
+    background-image: url("./assets/img/ep_arrow-down.svg");
+    background-repeat: no-repeat;
+    background-position: right 12px top 50%;
+    appearance: none;
 }
 
 .section-title {
     /* Стили для заголовков во второй секции */
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 25px;
 }
 
 .frameworks-list {
     /* Стили для маркированного списка во второй секции */
+    list-style-image: url("./assets/img/solar_map-arrow-up-bold.svg");
+    padding-left: 20px;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .books-list {
     /* Стили для нумерованного списка во второй секции */
+    padding-left: 20px;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .label {
     /* Стили для подписей чекбоксов */
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .text-field {
     /* Стили для односточного поля ввода текста */
+    border: 1px solid rgba(48, 48, 48, 0.3);
+    border-radius: 5px;
+    width: 330px;
+    height: 36px;
+    padding: 8px 12px;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(48, 48, 48, 0.2);
 }
 
 .btn {
     /* Стили для кнопки */
+    border-radius: 5px;
+    width: 125px;
+    height: 36px;
+    background-color: #2965f1;
+    font-weight: 700;
+    font-size: 14px;
+    color: #fff;
+    border: none;
 }
 
 .line {
     /* Стили для линии */
+    border: 1px solid rgba(48, 48, 48, 0.3);
+    width: 1440px;
+    height: 0px;
+    margin: 60px 0;
 }
 
 table {
     /* Стили для таблицы */
+    width: 300px;
+    height: 196px;
+    border: 1px solid #95a1bb;
+    border-collapse: collapse;
 }
 
 th, td {
     /* Стили для ячеек таблицы */
+    font-size: 14px;
+    padding: 12px 15px;
+    border: 1px solid #95a1bb;
+
 }
 
 footer {
     /* Стили для футера */
+    background-color: rgba(163, 167, 255, 0.3);
+    padding: 26px 0;
 }
 
 .footer-link {
     /* Стили для футера */
+    font-weight: 400;
+    font-size: 14px;
+    color: #2965f1;
 }
