--- a/HomeWork_4/style.css
+++ b/HomeWork_4/style.css
@@ -145,6 +145,7 @@ select:hover,
 form {
     margin-bottom: 40px;
     display: flex;
+    gap: 10px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
 }
 
@@ -213,7 +214,7 @@ footer {
 @media screen and (max-width: 1200px) {
     .main-section {
         min-height: fit-content;
-        padding-bottom: 60px;
+        padding-bottom: 100px;
         /* &&&📍 Свойства для установки минимальной высоты секции по размеру контента и нижнего внутреннего отступа */
     }
 
@@ -236,7 +237,7 @@ footer {
 
     .about-section {
     /* 📍 Внутренний отступ сверху и снизу */
-        padding: 60px 20px;
+        padding: 60px 0;
     }
 }
 
@@ -252,12 +253,12 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
-        padding: 30px 20px 60px;
+        padding: 30px 0 60px;
     }
 
     .main-section .wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
-        gap: 20px;
+        gap: 40px;
     }
 
     .main-title {
@@ -268,5 +269,6 @@ footer {
     .about-section .wrapper,
     .info-wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
+        gap: 50px;
     }
 }
